<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dip">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ssid" />

        <EditText
            android:id="@+id/ssid_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ssid"
            android:maxLength="32"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:inputType="textNoSuggestions" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security" />

        <Spinner
            android:id="@+id/security_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:prompt="@string/security"
            android:entries="@array/wifi_security" />

        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

            <CheckBox
                android:id="@+id/show_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:text="@string/wifi_show_password" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_id" />

        <EditText
            android:id="@+id/room_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_id"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:inputType="textNoSuggestions" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_resolution" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/send_resolution_group"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/send_2k"
                android:id="@+id/send_2k_radio" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_4k"
                android:id="@+id/send_4k_radio" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bitrate" />

        <EditText
            android:id="@+id/bitrate_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bitrate"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:inputType="number" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/initial_audio_mute"
            android:id="@+id/initial_audio_mute" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_button"
            android:text="@string/create"
            android:layout_gravity="center" />

    </LinearLayout>

</ScrollView>